Removed redundant base64 and renamed things to save headaches

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,3 @@
 Troubleshooting "documents/"
-Add more examples
+Add more examples (one that creates and access a new document)
 Making library.properties file/Making library compatible w Online editor
-Make a separate repo for SHA256
